# Musehypothermi

./: .gitignore  CALIBRATION_RECOVERY_NOTES.md  FIX_ARDUINO_BUILD_REPORT.md  QA2_REPORT.md  QA3_REPORT.md  README.md  TEST_REPORT.md  event_logger.py  gui_core.py  gui_core_v2.py  gui_core_v3.py  gui_debug.py  logger.py  profile_graph_popup.py  profile_graph_widget.py  profile_loader.py  requirements.txt  serial_comm.py  test.csv  test_suite.py
Logs/: gui_events_20250623_133037.csv  gui_events_20250623_133037.json  gui_events_20250623_133425.csv  gui_events_20250623_133425.json  gui_events_20250623_134204.csv  gui_events_20250623_134318.csv  gui_events_20250623_134824.csv  gui_events_20250623_134824.json  gui_events_20250623_135236.csv  gui_events_20250623_135236.json  gui_events_20250623_135606.csv  gui_events_20250623_135606.json  gui_events_20250623_141027.csv  gui_events_20250623_141027.json  gui_events_20250623_141525.csv  gui_events_20250623_141525.json  gui_events_20250623_142027.csv  gui_events_20250624_050848.csv  gui_events_20250624_050848.json  gui_events_20250624_054227.csv  gui_events_20250624_065149.csv  gui_events_20250624_065149.json  gui_events_20250624_070845.csv  gui_events_20250624_070845.json  gui_events_20250624_084043.csv  gui_events_20250624_084043.json  gui_events_20250624_090518.csv  gui_events_20250625_075906.csv  gui_events_20250625_081841.csv  gui_events_20250625_081841.json  (+48 more)
main/host_sim/: Arduino_host.h  CMakeLists.txt  host_sim.cpp
main/tests_host/: CMakeLists.txt  comm_api_stub.cpp  test_failsafe.cpp  test_pid.cpp  test_profile.cpp
(+86 files in other folders)
